[chore] update example.html

--- a/example/example.html
+++ b/example/example.html
@@ -10,9 +10,11 @@
         let $container = document.getElementById('container')
         let testData = {
           nodes: [{
-            id: '测试节点A'
+            id: '测试节点A',
+            image: 'https://si.geilicdn.com/passport-a10c38d186662266879bd282a71d8ee3.jpg'
           }, {
-            id: '测试节点B'
+            id: '测试节点B',
+            image: 'https://si.geilicdn.com/passport-f37fc170961dcc32d3d79aa637a3b404.jpg'
           }],
           links: [{
             source: '测试节点A',
