docs(readme): update gifs

--- a/example/example.html
+++ b/example/example.html
@@ -24,7 +24,8 @@
         a = new D3ForceGraph($container, testData, {
           width: 500,
           height: 500,
-          backgroundColor: [0, 0, 16]
+          backgroundColor: [0, 0, 16],
+          zoomNear: 10
         })
       }
     </script>
